# envy-rs

./: .env.example  Cargo.toml  README.md  example.toml  lefthook.yml  test.env
.github/workflows/: cd.yaml  ci.yaml
src/: common.rs  dotenv_handler.rs  io_manager.rs  main.rs  toml_handler.rs  utils.rs
tests/: cmd.rs
tests/fixtures/: test.env  test.toml
