[package]
name = "envy"
version = "0.3.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = { version = "4.4.14", features = ["derive"] }
colored = "2.1.0"
indexmap = "2.1.0"
anyhow = "1.0.79"
assert_cmd = "2.0.13"
